build/transformers/v4.11.0/en/model_doc/dpr.mdx
<script>
import Tip from "../../Tip.svelte";
import Youtube from "../../Youtube.svelte";	
export let fw: "pt" | "tf"
</script>

<!--Copyright 2020 The HuggingFace Team. All rights reserved.

Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
the License. You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
specific language governing permissions and limitations under the License.
-->

# DPR

## Overview

Dense Passage Retrieval (DPR) is a set of tools and models for state-of-the-art open-domain Q&A research. It was
introduced in [Dense Passage Retrieval for Open-Domain Question Answering](https://arxiv.org/abs/2004.04906) by
Vladimir Karpukhin, Barlas Oğuz, Sewon Min, Patrick Lewis, Ledell Wu, Sergey Edunov, Danqi Chen, Wen-tau Yih.

The abstract from the paper is the following:

*Open-domain question answering relies on efficient passage retrieval to select candidate contexts, where traditional
sparse vector space models, such as TF-IDF or BM25, are the de facto method. In this work, we show that retrieval can
be practically implemented using dense representations alone, where embeddings are learned from a small number of
questions and passages by a simple dual-encoder framework. When evaluated on a wide range of open-domain QA datasets,
our dense retriever outperforms a strong Lucene-BM25 system largely by 9%-19% absolute in terms of top-20 passage
retrieval accuracy, and helps our end-to-end QA system establish new state-of-the-art on multiple open-domain QA
benchmarks.*

This model was contributed by [lhoestq](https://huggingface.co/lhoestq). The original code can be found [here](https://github.com/facebookresearch/DPR).


## DPRConfig

<a id='transformers.DPRConfig'></a>
> **class transformers.DPRConfig**(vocab_size = 30522, hidden_size = 768, num_hidden_layers = 12, num_attention_heads = 12, intermediate_size = 3072, hidden_act = gelu, hidden_dropout_prob = 0.1, attention_probs_dropout_prob = 0.1, max_position_embeddings = 512, type_vocab_size = 2, initializer_range = 0.02, layer_norm_eps = 1e-12, pad_token_id = 0, gradient_checkpointing = False, position_embedding_type = absolute, projection_dim: int = 0, **kwargs)


[DPRConfig](model_doc/dpr.html#transformers.DPRConfig) is the configuration class to store the configuration of a _DPRModel_.

This is the configuration class to store the configuration of a [DPRContextEncoder](model_doc/dpr.html#transformers.DPRContextEncoder),
[DPRQuestionEncoder](model_doc/dpr.html#transformers.DPRQuestionEncoder), or a [DPRReader](model_doc/dpr.html#transformers.DPRReader). It is used to instantiate the
components of the DPR model.

This class is a subclass of [BertConfig](model_doc/bert.html#transformers.BertConfig). Please check the superclass for the documentation of
all kwargs.

> Parameters

- **vocab_size** (`int`, _optional_, defaults to 30522) --
  Vocabulary size of the DPR model. Defines the different tokens that can be represented by the _inputs_ids_
  passed to the forward method of [BertModel](model_doc/bert.html#transformers.BertModel).
- **hidden_size** (`int`, _optional_, defaults to 768) --
  Dimensionality of the encoder layers and the pooler layer.
- **num_hidden_layers** (`int`, _optional_, defaults to 12) --
  Number of hidden layers in the Transformer encoder.
- **num_attention_heads** (`int`, _optional_, defaults to 12) --
  Number of attention heads for each attention layer in the Transformer encoder.
- **intermediate_size** (`int`, _optional_, defaults to 3072) --
  Dimensionality of the "intermediate" (i.e., feed-forward) layer in the Transformer encoder.
- **hidden_act** (`str` or `function`, _optional_, defaults to `"gelu"`) --
  The non-linear activation function (function or string) in the encoder and pooler. If string,
  `"gelu"`, `"relu"`, `"silu"` and `"gelu_new"` are supported.
- **hidden_dropout_prob** (`float`, _optional_, defaults to 0.1) --
  The dropout probability for all fully connected layers in the embeddings, encoder, and pooler.
- **attention_probs_dropout_prob** (`float`, _optional_, defaults to 0.1) --
  The dropout ratio for the attention probabilities.
- **max_position_embeddings** (`int`, _optional_, defaults to 512) --
  The maximum sequence length that this model might ever be used with. Typically set this to something large
  just in case (e.g., 512 or 1024 or 2048).
- **type_vocab_size** (`int`, _optional_, defaults to 2) --
  The vocabulary size of the _token_type_ids_ passed into [BertModel](model_doc/bert.html#transformers.BertModel).
- **initializer_range** (`float`, _optional_, defaults to 0.02) --
  The standard deviation of the truncated_normal_initializer for initializing all weight matrices.
- **layer_norm_eps** (`float`, _optional_, defaults to 1e-12) --
  The epsilon used by the layer normalization layers.
- **gradient_checkpointing** (`bool`, _optional_, defaults to `False`) --
  If True, use gradient checkpointing to save memory at the expense of slower backward pass.
- **position_embedding_type** (`str`, _optional_, defaults to `"absolute"`) --
  Type of position embedding. Choose one of `"absolute"`, `"relative_key"`,
  `"relative_key_query"`. For positional embeddings use `"absolute"`. For more information on
  `"relative_key"`, please refer to [Self-Attention with Relative Position Representations (Shaw et al.)](https://arxiv.org/abs/1803.02155). For more information on `"relative_key_query"`, please refer to
  _Method 4_ in [Improve Transformer Models with Better Relative Position Embeddings (Huang et al.)](https://arxiv.org/abs/2009.13658).
- **projection_dim** (`int`, _optional_, defaults to 0) --
  Dimension of the projection for the context and question encoders. If it is set to zero (default), then no
  projection is done.


## DPRContextEncoderTokenizer

<a id='transformers.DPRContextEncoderTokenizer'></a>
> **class transformers.DPRContextEncoderTokenizer**(vocab_file, do_lower_case = True, do_basic_tokenize = True, never_split = None, unk_token = [UNK], sep_token = [SEP], pad_token = [PAD], cls_token = [CLS], mask_token = [MASK], tokenize_chinese_chars = True, strip_accents = None, **kwargs)


Construct a DPRContextEncoder tokenizer.

[DPRContextEncoderTokenizer](model_doc/dpr.html#transformers.DPRContextEncoderTokenizer) is identical to [BertTokenizer](model_doc/bert.html#transformers.BertTokenizer) and runs
end-to-end tokenization: punctuation splitting and wordpiece.

Refer to superclass [BertTokenizer](model_doc/bert.html#transformers.BertTokenizer) for usage examples and documentation concerning
parameters.


## DPRContextEncoderTokenizerFast

<a id='transformers.DPRContextEncoderTokenizerFast'></a>
> **class transformers.DPRContextEncoderTokenizerFast**(vocab_file = None, tokenizer_file = None, do_lower_case = True, unk_token = [UNK], sep_token = [SEP], pad_token = [PAD], cls_token = [CLS], mask_token = [MASK], tokenize_chinese_chars = True, strip_accents = None, **kwargs)


Construct a "fast" DPRContextEncoder tokenizer (backed by HuggingFace's _tokenizers_ library).

[DPRContextEncoderTokenizerFast](model_doc/dpr.html#transformers.DPRContextEncoderTokenizerFast) is identical to [BertTokenizerFast](model_doc/bert.html#transformers.BertTokenizerFast) and
runs end-to-end tokenization: punctuation splitting and wordpiece.

Refer to superclass [BertTokenizerFast](model_doc/bert.html#transformers.BertTokenizerFast) for usage examples and documentation concerning
parameters.


<a id='transformers.DPRContextEncoderTokenizer'></a>
> **class DPRContextEncoderTokenizer**(vocab_file, do_lower_case = True, do_basic_tokenize = True, never_split = None, unk_token = [UNK], sep_token = [SEP], pad_token = [PAD], cls_token = [CLS], mask_token = [MASK], tokenize_chinese_chars = True, strip_accents = None, **kwargs)


Construct a DPRContextEncoder tokenizer.

[DPRContextEncoderTokenizer](model_doc/dpr.html#transformers.DPRContextEncoderTokenizer) is identical to [BertTokenizer](model_doc/bert.html#transformers.BertTokenizer) and runs
end-to-end tokenization: punctuation splitting and wordpiece.

Refer to superclass [BertTokenizer](model_doc/bert.html#transformers.BertTokenizer) for usage examples and documentation concerning
parameters.


## DPRQuestionEncoderTokenizer

<a id='transformers.DPRQuestionEncoderTokenizer'></a>
> **class transformers.DPRQuestionEncoderTokenizer**(vocab_file, do_lower_case = True, do_basic_tokenize = True, never_split = None, unk_token = [UNK], sep_token = [SEP], pad_token = [PAD], cls_token = [CLS], mask_token = [MASK], tokenize_chinese_chars = True, strip_accents = None, **kwargs)


Constructs a DPRQuestionEncoder tokenizer.

[DPRQuestionEncoderTokenizer](model_doc/dpr.html#transformers.DPRQuestionEncoderTokenizer) is identical to [BertTokenizer](model_doc/bert.html#transformers.BertTokenizer) and runs
end-to-end tokenization: punctuation splitting and wordpiece.

Refer to superclass [BertTokenizer](model_doc/bert.html#transformers.BertTokenizer) for usage examples and documentation concerning
parameters.


## DPRQuestionEncoderTokenizerFast

<a id='transformers.DPRQuestionEncoderTokenizerFast'></a>
> **class transformers.DPRQuestionEncoderTokenizerFast**(vocab_file = None, tokenizer_file = None, do_lower_case = True, unk_token = [UNK], sep_token = [SEP], pad_token = [PAD], cls_token = [CLS], mask_token = [MASK], tokenize_chinese_chars = True, strip_accents = None, **kwargs)


Constructs a "fast" DPRQuestionEncoder tokenizer (backed by HuggingFace's _tokenizers_ library).

[DPRQuestionEncoderTokenizerFast](model_doc/dpr.html#transformers.DPRQuestionEncoderTokenizerFast) is identical to [BertTokenizerFast](model_doc/bert.html#transformers.BertTokenizerFast) and
runs end-to-end tokenization: punctuation splitting and wordpiece.

Refer to superclass [BertTokenizerFast](model_doc/bert.html#transformers.BertTokenizerFast) for usage examples and documentation concerning
parameters.


<a id='transformers.DPRQuestionEncoderTokenizer'></a>
> **class DPRQuestionEncoderTokenizer**(vocab_file, do_lower_case = True, do_basic_tokenize = True, never_split = None, unk_token = [UNK], sep_token = [SEP], pad_token = [PAD], cls_token = [CLS], mask_token = [MASK], tokenize_chinese_chars = True, strip_accents = None, **kwargs)


Constructs a DPRQuestionEncoder tokenizer.

[DPRQuestionEncoderTokenizer](model_doc/dpr.html#transformers.DPRQuestionEncoderTokenizer) is identical to [BertTokenizer](model_doc/bert.html#transformers.BertTokenizer) and runs
end-to-end tokenization: punctuation splitting and wordpiece.

Refer to superclass [BertTokenizer](model_doc/bert.html#transformers.BertTokenizer) for usage examples and documentation concerning
parameters.


## DPRReaderTokenizer

<a id='transformers.DPRReaderTokenizer'></a>
> **class transformers.DPRReaderTokenizer**(vocab_file, do_lower_case = True, do_basic_tokenize = True, never_split = None, unk_token = [UNK], sep_token = [SEP], pad_token = [PAD], cls_token = [CLS], mask_token = [MASK], tokenize_chinese_chars = True, strip_accents = None, **kwargs)


Construct a DPRReader tokenizer.

[DPRReaderTokenizer](model_doc/dpr.html#transformers.DPRReaderTokenizer) is almost identical to [BertTokenizer](model_doc/bert.html#transformers.BertTokenizer) and runs
end-to-end tokenization: punctuation splitting and wordpiece. The difference is that is has three inputs strings:
question, titles and texts that are combined to be fed to the [DPRReader](model_doc/dpr.html#transformers.DPRReader) model.

Refer to superclass [BertTokenizer](model_doc/bert.html#transformers.BertTokenizer) for usage examples and documentation concerning
parameters.

Return a dictionary with the token ids of the input strings and other information to give to
`.decode_best_spans`. It converts the strings of a question and different passages (title and text) in a
sequence of IDs (integers), using the tokenizer and vocabulary. The resulting `input_ids` is a matrix of size
`(n_passages, sequence_length)` with the format:

```
[CLS] <question token ids> [SEP] <titles ids> [SEP] <texts ids>
```

> Parameters

- **questions** (`str` or `List[str]`) --
  The questions to be encoded. You can specify one question for many passages. In this case, the question
  will be duplicated like `[questions] * n_passages`. Otherwise you have to specify as many questions as
  in `titles` or `texts`.
- **titles** (`str` or `List[str]`) --
  The passages titles to be encoded. This can be a string or a list of strings if there are several passages.
- **texts** (`str` or `List[str]`) --
  The passages texts to be encoded. This can be a string or a list of strings if there are several passages.
- **padding** (`bool`, `str` or [PaddingStrategy](internal/file_utils.html#transformers.file_utils.PaddingStrategy), _optional_, defaults to `False`) --
  Activates and controls padding. Accepts the following values:

  - `True` or `'longest'`: Pad to the longest sequence in the batch (or no padding if only a single
    sequence if provided).
  - `'max_length'`: Pad to a maximum length specified with the argument `max_length` or to the
    maximum acceptable input length for the model if that argument is not provided.
  - `False` or `'do_not_pad'` (default): No padding (i.e., can output a batch with sequences of
    different lengths).
- **truncation** (`bool`, `str` or [TruncationStrategy](internal/tokenization_utils.html#transformers.tokenization_utils_base.TruncationStrategy), _optional_, defaults to `False`) --
  Activates and controls truncation. Accepts the following values:

  - `True` or `'longest_first'`: Truncate to a maximum length specified with the argument
    `max_length` or to the maximum acceptable input length for the model if that argument is not
    provided. This will truncate token by token, removing a token from the longest sequence in the pair if a
    pair of sequences (or a batch of pairs) is provided.
  - `'only_first'`: Truncate to a maximum length specified with the argument `max_length` or to the
    maximum acceptable input length for the model if that argument is not provided. This will only truncate
    the first sequence of a pair if a pair of sequences (or a batch of pairs) is provided.
  - `'only_second'`: Truncate to a maximum length specified with the argument `max_length` or to
    the maximum acceptable input length for the model if that argument is not provided. This will only
    truncate the second sequence of a pair if a pair of sequences (or a batch of pairs) is provided.
  - `False` or `'do_not_truncate'` (default): No truncation (i.e., can output batch with sequence
    lengths greater than the model maximum admissible input size).
- **max_length** (`int`, _optional_) --
  Controls the maximum length to use by one of the truncation/padding parameters.

  If left unset or set to `None`, this will use the predefined model maximum length if a maximum
  length is required by one of the truncation/padding parameters. If the model has no specific maximum
  input length (like XLNet) truncation/padding to a maximum length will be deactivated.
- **return_tensors** (`str` or [TensorType](internal/file_utils.html#transformers.TensorType), _optional_) --
  If set, will return tensors instead of list of python integers. Acceptable values are:

  - `'tf'`: Return TensorFlow `tf.constant` objects.
  - `'pt'`: Return PyTorch `torch.Tensor` objects.
  - `'np'`: Return Numpy `np.ndarray` objects.
- **return_attention_mask** (`bool`, _optional_) --
  Whether or not to return the attention mask. If not set, will return the attention mask according to the
  specific tokenizer's default, defined by the `return_outputs` attribute.

  [What are attention masks?](../glossary.html#attention-mask)

> Returns

A dictionary with the following keys:

- `input_ids`: List of token ids to be fed to a model.
- `attention_mask`: List of indices specifying which tokens should be attended to by the model.

> Return type

`Dict[str, List[List[int]]]`


## DPRReaderTokenizerFast

<a id='transformers.DPRReaderTokenizerFast'></a>
> **class transformers.DPRReaderTokenizerFast**(vocab_file = None, tokenizer_file = None, do_lower_case = True, unk_token = [UNK], sep_token = [SEP], pad_token = [PAD], cls_token = [CLS], mask_token = [MASK], tokenize_chinese_chars = True, strip_accents = None, **kwargs)


Constructs a "fast" DPRReader tokenizer (backed by HuggingFace's _tokenizers_ library).

[DPRReaderTokenizerFast](model_doc/dpr.html#transformers.DPRReaderTokenizerFast) is almost identical to [BertTokenizerFast](model_doc/bert.html#transformers.BertTokenizerFast) and
runs end-to-end tokenization: punctuation splitting and wordpiece. The difference is that is has three inputs
strings: question, titles and texts that are combined to be fed to the [DPRReader](model_doc/dpr.html#transformers.DPRReader) model.

Refer to superclass [BertTokenizerFast](model_doc/bert.html#transformers.BertTokenizerFast) for usage examples and documentation concerning
parameters.


Return a dictionary with the token ids of the input strings and other information to give to
`.decode_best_spans`. It converts the strings of a question and different passages (title and text) in a
sequence of IDs (integers), using the tokenizer and vocabulary. The resulting `input_ids` is a matrix of size
`(n_passages, sequence_length)` with the format:

[CLS] <question token ids> [SEP] <titles ids> [SEP] <texts ids>

> Parameters

- **questions** (`str` or `List[str]`) --
  The questions to be encoded. You can specify one question for many passages. In this case, the question
  will be duplicated like `[questions] * n_passages`. Otherwise you have to specify as many questions as
  in `titles` or `texts`.
- **titles** (`str` or `List[str]`) --
  The passages titles to be encoded. This can be a string or a list of strings if there are several passages.
- **texts** (`str` or `List[str]`) --
  The passages texts to be encoded. This can be a string or a list of strings if there are several passages.
- **padding** (`bool`, `str` or [PaddingStrategy](internal/file_utils.html#transformers.file_utils.PaddingStrategy), _optional_, defaults to `False`) --
  Activates and controls padding. Accepts the following values:

  - `True` or `'longest'`: Pad to the longest sequence in the batch (or no padding if only a single
    sequence if provided).
  - `'max_length'`: Pad to a maximum length specified with the argument `max_length` or to the
    maximum acceptable input length for the model if that argument is not provided.
  - `False` or `'do_not_pad'` (default): No padding (i.e., can output a batch with sequences of
    different lengths).
- **truncation** (`bool`, `str` or [TruncationStrategy](internal/tokenization_utils.html#transformers.tokenization_utils_base.TruncationStrategy), _optional_, defaults to `False`) --
  Activates and controls truncation. Accepts the following values:

  - `True` or `'longest_first'`: Truncate to a maximum length specified with the argument
    `max_length` or to the maximum acceptable input length for the model if that argument is not
    provided. This will truncate token by token, removing a token from the longest sequence in the pair if a
    pair of sequences (or a batch of pairs) is provided.
  - `'only_first'`: Truncate to a maximum length specified with the argument `max_length` or to the
    maximum acceptable input length for the model if that argument is not provided. This will only truncate
    the first sequence of a pair if a pair of sequences (or a batch of pairs) is provided.
  - `'only_second'`: Truncate to a maximum length specified with the argument `max_length` or to
    the maximum acceptable input length for the model if that argument is not provided. This will only
    truncate the second sequence of a pair if a pair of sequences (or a batch of pairs) is provided.
  - `False` or `'do_not_truncate'` (default): No truncation (i.e., can output batch with sequence
    lengths greater than the model maximum admissible input size).
- **max_length** (`int`, _optional_) --
  Controls the maximum length to use by one of the truncation/padding parameters.

  If left unset or set to `None`, this will use the predefined model maximum length if a maximum
  length is required by one of the truncation/padding parameters. If the model has no specific maximum
  input length (like XLNet) truncation/padding to a maximum length will be deactivated.
- **return_tensors** (`str` or [TensorType](internal/file_utils.html#transformers.TensorType), _optional_) --
  If set, will return tensors instead of list of python integers. Acceptable values are:

  - `'tf'`: Return TensorFlow `tf.constant` objects.
  - `'pt'`: Return PyTorch `torch.Tensor` objects.
  - `'np'`: Return Numpy `np.ndarray` objects.
- **return_attention_mask** (`bool`, _optional_) --
  Whether or not to return the attention mask. If not set, will return the attention mask according to the
  specific tokenizer's default, defined by the `return_outputs` attribute.

  [What are attention masks?](../glossary.html#attention-mask)

> Returns

A dictionary with the following keys:

- `input_ids`: List of token ids to be fed to a model.
- `attention_mask`: List of indices specifying which tokens should be attended to by the model.

> Return type

`Dict[str, List[List[int]]]`


<a id='transformers.DPRReaderTokenizer'></a>
> **class DPRReaderTokenizer**(vocab_file, do_lower_case = True, do_basic_tokenize = True, never_split = None, unk_token = [UNK], sep_token = [SEP], pad_token = [PAD], cls_token = [CLS], mask_token = [MASK], tokenize_chinese_chars = True, strip_accents = None, **kwargs)


Construct a DPRReader tokenizer.

[DPRReaderTokenizer](model_doc/dpr.html#transformers.DPRReaderTokenizer) is almost identical to [BertTokenizer](model_doc/bert.html#transformers.BertTokenizer) and runs
end-to-end tokenization: punctuation splitting and wordpiece. The difference is that is has three inputs strings:
question, titles and texts that are combined to be fed to the [DPRReader](model_doc/dpr.html#transformers.DPRReader) model.

Refer to superclass [BertTokenizer](model_doc/bert.html#transformers.BertTokenizer) for usage examples and documentation concerning
parameters.

Return a dictionary with the token ids of the input strings and other information to give to
`.decode_best_spans`. It converts the strings of a question and different passages (title and text) in a
sequence of IDs (integers), using the tokenizer and vocabulary. The resulting `input_ids` is a matrix of size
`(n_passages, sequence_length)` with the format:

```
[CLS] <question token ids> [SEP] <titles ids> [SEP] <texts ids>
```

> Parameters

- **questions** (`str` or `List[str]`) --
  The questions to be encoded. You can specify one question for many passages. In this case, the question
  will be duplicated like `[questions] * n_passages`. Otherwise you have to specify as many questions as
  in `titles` or `texts`.
- **titles** (`str` or `List[str]`) --
  The passages titles to be encoded. This can be a string or a list of strings if there are several passages.
- **texts** (`str` or `List[str]`) --
  The passages texts to be encoded. This can be a string or a list of strings if there are several passages.
- **padding** (`bool`, `str` or [PaddingStrategy](internal/file_utils.html#transformers.file_utils.PaddingStrategy), _optional_, defaults to `False`) --
  Activates and controls padding. Accepts the following values:

  - `True` or `'longest'`: Pad to the longest sequence in the batch (or no padding if only a single
    sequence if provided).
  - `'max_length'`: Pad to a maximum length specified with the argument `max_length` or to the
    maximum acceptable input length for the model if that argument is not provided.
  - `False` or `'do_not_pad'` (default): No padding (i.e., can output a batch with sequences of
    different lengths).
- **truncation** (`bool`, `str` or [TruncationStrategy](internal/tokenization_utils.html#transformers.tokenization_utils_base.TruncationStrategy), _optional_, defaults to `False`) --
  Activates and controls truncation. Accepts the following values:

  - `True` or `'longest_first'`: Truncate to a maximum length specified with the argument
    `max_length` or to the maximum acceptable input length for the model if that argument is not
    provided. This will truncate token by token, removing a token from the longest sequence in the pair if a
    pair of sequences (or a batch of pairs) is provided.
  - `'only_first'`: Truncate to a maximum length specified with the argument `max_length` or to the
    maximum acceptable input length for the model if that argument is not provided. This will only truncate
    the first sequence of a pair if a pair of sequences (or a batch of pairs) is provided.
  - `'only_second'`: Truncate to a maximum length specified with the argument `max_length` or to
    the maximum acceptable input length for the model if that argument is not provided. This will only
    truncate the second sequence of a pair if a pair of sequences (or a batch of pairs) is provided.
  - `False` or `'do_not_truncate'` (default): No truncation (i.e., can output batch with sequence
    lengths greater than the model maximum admissible input size).
- **max_length** (`int`, _optional_) --
  Controls the maximum length to use by one of the truncation/padding parameters.

  If left unset or set to `None`, this will use the predefined model maximum length if a maximum
  length is required by one of the truncation/padding parameters. If the model has no specific maximum
  input length (like XLNet) truncation/padding to a maximum length will be deactivated.
- **return_tensors** (`str` or [TensorType](internal/file_utils.html#transformers.TensorType), _optional_) --
  If set, will return tensors instead of list of python integers. Acceptable values are:

  - `'tf'`: Return TensorFlow `tf.constant` objects.
  - `'pt'`: Return PyTorch `torch.Tensor` objects.
  - `'np'`: Return Numpy `np.ndarray` objects.
- **return_attention_mask** (`bool`, _optional_) --
  Whether or not to return the attention mask. If not set, will return the attention mask according to the
  specific tokenizer's default, defined by the `return_outputs` attribute.

  [What are attention masks?](../glossary.html#attention-mask)

> Returns

A dictionary with the following keys:

- `input_ids`: List of token ids to be fed to a model.
- `attention_mask`: List of indices specifying which tokens should be attended to by the model.

> Return type

`Dict[str, List[List[int]]]`


## DPR specific outputs

<a id='transformers.models.dpr.modeling_dpr.DPRContextEncoderOutput'></a>
> **class transformers.models.dpr.modeling\_dpr.DPRContextEncoderOutput**(pooler_output: FloatTensor, hidden_states: typing.Optional[typing.Tuple[torch.FloatTensor]] = None, attentions: typing.Optional[typing.Tuple[torch.FloatTensor]] = None)


Class for outputs of [DPRQuestionEncoder](model_doc/dpr.html#transformers.DPRQuestionEncoder).

> Parameters

pooler_output -- (:obj:`torch.FloatTensor` of shape `(batch_size, embeddings_size)`):
The DPR encoder outputs the _pooler_output_ that corresponds to the context representation. Last layer
hidden-state of the first token of the sequence (classification token) further processed by a Linear layer.
This output is to be used to embed contexts for nearest neighbors queries with questions embeddings.
- **hidden_states** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_hidden_states=True` is passed or when `config.output_hidden_states=True`) --
  Tuple of `torch.FloatTensor` (one for the output of the embeddings + one for the output of each layer)
  of shape `(batch_size, sequence_length, hidden_size)`.

  Hidden-states of the model at the output of each layer plus the initial embedding outputs.
- **attentions** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_attentions=True` is passed or when `config.output_attentions=True`) --
  Tuple of `torch.FloatTensor` (one for each layer) of shape `(batch_size, num_heads, sequence_length, sequence_length)`.

  Attentions weights after the attention softmax, used to compute the weighted average in the self-attention
  heads.


<a id='transformers.models.dpr.modeling_dpr.DPRQuestionEncoderOutput'></a>
> **class transformers.models.dpr.modeling\_dpr.DPRQuestionEncoderOutput**(pooler_output: FloatTensor, hidden_states: typing.Optional[typing.Tuple[torch.FloatTensor]] = None, attentions: typing.Optional[typing.Tuple[torch.FloatTensor]] = None)


Class for outputs of [DPRQuestionEncoder](model_doc/dpr.html#transformers.DPRQuestionEncoder).

> Parameters

pooler_output -- (:obj:`torch.FloatTensor` of shape `(batch_size, embeddings_size)`):
The DPR encoder outputs the _pooler_output_ that corresponds to the question representation. Last layer
hidden-state of the first token of the sequence (classification token) further processed by a Linear layer.
This output is to be used to embed questions for nearest neighbors queries with context embeddings.
- **hidden_states** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_hidden_states=True` is passed or when `config.output_hidden_states=True`) --
  Tuple of `torch.FloatTensor` (one for the output of the embeddings + one for the output of each layer)
  of shape `(batch_size, sequence_length, hidden_size)`.

  Hidden-states of the model at the output of each layer plus the initial embedding outputs.
- **attentions** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_attentions=True` is passed or when `config.output_attentions=True`) --
  Tuple of `torch.FloatTensor` (one for each layer) of shape `(batch_size, num_heads, sequence_length, sequence_length)`.

  Attentions weights after the attention softmax, used to compute the weighted average in the self-attention
  heads.


<a id='transformers.DPRReaderOutput'></a>
> **class transformers.DPRReaderOutput**(start_logits: FloatTensor, end_logits: FloatTensor = None, relevance_logits: FloatTensor = None, hidden_states: typing.Optional[typing.Tuple[torch.FloatTensor]] = None, attentions: typing.Optional[typing.Tuple[torch.FloatTensor]] = None)


Class for outputs of [DPRQuestionEncoder](model_doc/dpr.html#transformers.DPRQuestionEncoder).

> Parameters

start_logits -- (:obj:`torch.FloatTensor` of shape `(n_passages, sequence_length)`):
Logits of the start index of the span for each passage.
end_logits -- (:obj:`torch.FloatTensor` of shape `(n_passages, sequence_length)`):
Logits of the end index of the span for each passage.
relevance_logits -- (``torch.FloatTensor``` of shape `(n_passages, )`):
Outputs of the QA classifier of the DPRReader that corresponds to the scores of each passage to answer the
question, compared to all the other passages.
- **hidden_states** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_hidden_states=True` is passed or when `config.output_hidden_states=True`) --
  Tuple of `torch.FloatTensor` (one for the output of the embeddings + one for the output of each layer)
  of shape `(batch_size, sequence_length, hidden_size)`.

  Hidden-states of the model at the output of each layer plus the initial embedding outputs.
- **attentions** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_attentions=True` is passed or when `config.output_attentions=True`) --
  Tuple of `torch.FloatTensor` (one for each layer) of shape `(batch_size, num_heads, sequence_length, sequence_length)`.

  Attentions weights after the attention softmax, used to compute the weighted average in the self-attention
  heads.


## DPRContextEncoder

<a id='transformers.DPRContextEncoder'></a>
> **class transformers.DPRContextEncoder**(config: DPRConfig)

The bare DPRContextEncoder transformer outputting pooler outputs as context representations.

This model inherits from [PreTrainedModel](main_classes/model.html#transformers.PreTrainedModel). Check the superclass documentation for the generic
methods the library implements for all its model (such as downloading or saving, resizing the input embeddings,
pruning heads etc.)

This model is also a PyTorch [torch.nn.Module](https://pytorch.org/docs/stable/nn.html#torch.nn.Module)
subclass. Use it as a regular PyTorch Module and refer to the PyTorch documentation for all matter related to
general usage and behavior.

> Parameters

- **config** ([DPRConfig](model_doc/dpr.html#transformers.DPRConfig)) -- Model configuration class with all the parameters of the model.
  Initializing with a config file does not load the weights associated with the model, only the
  configuration. Check out the [from_pretrained()](main_classes/model.html#transformers.PreTrainedModel.from_pretrained) method to load the model
  weights.


<a id='transformers.DPRContextEncoder.forward'></a>
> **forward**(self, input_ids: typing.Optional[torch.Tensor] = None, attention_mask: typing.Optional[torch.Tensor] = None, token_type_ids: typing.Optional[torch.Tensor] = None, inputs_embeds: typing.Optional[torch.Tensor] = None, output_attentions = None, output_hidden_states = None, return_dict = None)

The [DPRContextEncoder](model_doc/dpr.html#transformers.DPRContextEncoder) forward method, overrides the `__call__` special method.

<Tip>

Although the recipe for forward pass needs to be defined within this function, one should call the
`Module` instance afterwards instead of this since the former takes care of running the pre and post
processing steps while the latter silently ignores them.

</Tip>

> Parameters

- **input_ids** (`torch.LongTensor` of shape `(batch_size, sequence_length)`) --
  Indices of input sequence tokens in the vocabulary. To match pretraining, DPR input sequence should be
  formatted with [CLS] and [SEP] tokens as follows:

  (a) For sequence pairs (for a pair title+text for example):

```
tokens:         [CLS] is this jack ##son ##ville ? [SEP] no it is not . [SEP]
token_type_ids:   0   0  0    0    0     0       0   0   1  1  1  1   1   1
```

(b) For single sequences (for a question for example):

```
tokens:         [CLS] the dog is hairy . [SEP]
token_type_ids:   0   0   0   0  0     0   0
```

DPR is a model with absolute position embeddings so it's usually advised to pad the inputs on the right
rather than the left.

Indices can be obtained using `DPRTokenizer`. See
[transformers.PreTrainedTokenizer.encode()](internal/tokenization_utils.html#transformers.PreTrainedTokenizerBase.encode) and [transformers.PreTrainedTokenizer.__call__()](internal/tokenization_utils.html#transformers.PreTrainedTokenizerBase.__call__) for
details.

[What are input IDs?](../glossary.html#input-ids)
- **attention_mask** (`torch.FloatTensor` of shape `(batch_size, sequence_length)`, _optional_) --
  Mask to avoid performing attention on padding token indices. Mask values selected in `[0, 1]`:

  - 1 for tokens that are **not masked**,
  - 0 for tokens that are **masked**.

  [What are attention masks?](../glossary.html#attention-mask)
- **token_type_ids** (`torch.LongTensor` of shape `(batch_size, sequence_length)`, _optional_) --
  Segment token indices to indicate first and second portions of the inputs. Indices are selected in `[0, 1]`:

  - 0 corresponds to a _sentence A_ token,
  - 1 corresponds to a _sentence B_ token.

  [What are token type IDs?](../glossary.html#token-type-ids)
- **inputs_embeds** (`torch.FloatTensor` of shape `(batch_size, sequence_length, hidden_size)`, _optional_) --
  Optionally, instead of passing `input_ids` you can choose to directly pass an embedded representation.
  This is useful if you want more control over how to convert `input_ids` indices into associated
  vectors than the model's internal embedding lookup matrix.
- **output_attentions** (`bool`, _optional_) --
  Whether or not to return the attentions tensors of all attention layers. See `attentions` under returned
  tensors for more detail.
- **output_hidden_states** (`bool`, _optional_) --
  Whether or not to return the hidden states of all layers. See `hidden_states` under returned tensors for
  more detail.
- **return_dict** (`bool`, _optional_) --
  Whether or not to return a [ModelOutput](main_classes/output.html#transformers.file_utils.ModelOutput) instead of a plain tuple.


> Returns

A [DPRContextEncoderOutput](model_doc/dpr.html#transformers.models.dpr.modeling_dpr.DPRContextEncoderOutput) or a tuple of
`torch.FloatTensor` (if `return_dict=False` is passed or when `config.return_dict=False`) comprising
various elements depending on the configuration ([DPRConfig](model_doc/dpr.html#transformers.DPRConfig)) and inputs.

- **pooler_output:** (:obj:`torch.FloatTensor` of shape `(batch_size, embeddings_size)`) -- The DPR encoder outputs the _pooler_output_ that corresponds to the context representation. Last layer
  hidden-state of the first token of the sequence (classification token) further processed by a Linear layer.
  This output is to be used to embed contexts for nearest neighbors queries with questions embeddings.
- **hidden_states** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_hidden_states=True` is passed or when `config.output_hidden_states=True`) -- Tuple of `torch.FloatTensor` (one for the output of the embeddings + one for the output of each layer)
  of shape `(batch_size, sequence_length, hidden_size)`.

  Hidden-states of the model at the output of each layer plus the initial embedding outputs.
- **attentions** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_attentions=True` is passed or when `config.output_attentions=True`) -- Tuple of `torch.FloatTensor` (one for each layer) of shape `(batch_size, num_heads, sequence_length, sequence_length)`.

  Attentions weights after the attention softmax, used to compute the weighted average in the self-attention
  heads.


> Examples:

```python
>>> from transformers import DPRContextEncoder, DPRContextEncoderTokenizer
>>> tokenizer = DPRContextEncoderTokenizer.from_pretrained('facebook/dpr-ctx_encoder-single-nq-base')
>>> model = DPRContextEncoder.from_pretrained('facebook/dpr-ctx_encoder-single-nq-base')
>>> input_ids = tokenizer("Hello, is my dog cute ?", return_tensors='pt')["input_ids"]
>>> embeddings = model(input_ids).pooler_output
```

> Return type

[DPRContextEncoderOutput](model_doc/dpr.html#transformers.models.dpr.modeling_dpr.DPRContextEncoderOutput) or `tuple(torch.FloatTensor)`


## DPRQuestionEncoder

<a id='transformers.DPRQuestionEncoder'></a>
> **class transformers.DPRQuestionEncoder**(config: DPRConfig)

The bare DPRQuestionEncoder transformer outputting pooler outputs as question representations.

This model inherits from [PreTrainedModel](main_classes/model.html#transformers.PreTrainedModel). Check the superclass documentation for the generic
methods the library implements for all its model (such as downloading or saving, resizing the input embeddings,
pruning heads etc.)

This model is also a PyTorch [torch.nn.Module](https://pytorch.org/docs/stable/nn.html#torch.nn.Module)
subclass. Use it as a regular PyTorch Module and refer to the PyTorch documentation for all matter related to
general usage and behavior.

> Parameters

- **config** ([DPRConfig](model_doc/dpr.html#transformers.DPRConfig)) -- Model configuration class with all the parameters of the model.
  Initializing with a config file does not load the weights associated with the model, only the
  configuration. Check out the [from_pretrained()](main_classes/model.html#transformers.PreTrainedModel.from_pretrained) method to load the model
  weights.


<a id='transformers.DPRQuestionEncoder.forward'></a>
> **forward**(self, input_ids: typing.Optional[torch.Tensor] = None, attention_mask: typing.Optional[torch.Tensor] = None, token_type_ids: typing.Optional[torch.Tensor] = None, inputs_embeds: typing.Optional[torch.Tensor] = None, output_attentions = None, output_hidden_states = None, return_dict = None)

The [DPRQuestionEncoder](model_doc/dpr.html#transformers.DPRQuestionEncoder) forward method, overrides the `__call__` special method.

<Tip>

Although the recipe for forward pass needs to be defined within this function, one should call the
`Module` instance afterwards instead of this since the former takes care of running the pre and post
processing steps while the latter silently ignores them.

</Tip>

> Parameters

- **input_ids** (`torch.LongTensor` of shape `(batch_size, sequence_length)`) --
  Indices of input sequence tokens in the vocabulary. To match pretraining, DPR input sequence should be
  formatted with [CLS] and [SEP] tokens as follows:

  (a) For sequence pairs (for a pair title+text for example):

```
tokens:         [CLS] is this jack ##son ##ville ? [SEP] no it is not . [SEP]
token_type_ids:   0   0  0    0    0     0       0   0   1  1  1  1   1   1
```

(b) For single sequences (for a question for example):

```
tokens:         [CLS] the dog is hairy . [SEP]
token_type_ids:   0   0   0   0  0     0   0
```

DPR is a model with absolute position embeddings so it's usually advised to pad the inputs on the right
rather than the left.

Indices can be obtained using `DPRTokenizer`. See
[transformers.PreTrainedTokenizer.encode()](internal/tokenization_utils.html#transformers.PreTrainedTokenizerBase.encode) and [transformers.PreTrainedTokenizer.__call__()](internal/tokenization_utils.html#transformers.PreTrainedTokenizerBase.__call__) for
details.

[What are input IDs?](../glossary.html#input-ids)
- **attention_mask** (`torch.FloatTensor` of shape `(batch_size, sequence_length)`, _optional_) --
  Mask to avoid performing attention on padding token indices. Mask values selected in `[0, 1]`:

  - 1 for tokens that are **not masked**,
  - 0 for tokens that are **masked**.

  [What are attention masks?](../glossary.html#attention-mask)
- **token_type_ids** (`torch.LongTensor` of shape `(batch_size, sequence_length)`, _optional_) --
  Segment token indices to indicate first and second portions of the inputs. Indices are selected in `[0, 1]`:

  - 0 corresponds to a _sentence A_ token,
  - 1 corresponds to a _sentence B_ token.

  [What are token type IDs?](../glossary.html#token-type-ids)
- **inputs_embeds** (`torch.FloatTensor` of shape `(batch_size, sequence_length, hidden_size)`, _optional_) --
  Optionally, instead of passing `input_ids` you can choose to directly pass an embedded representation.
  This is useful if you want more control over how to convert `input_ids` indices into associated
  vectors than the model's internal embedding lookup matrix.
- **output_attentions** (`bool`, _optional_) --
  Whether or not to return the attentions tensors of all attention layers. See `attentions` under returned
  tensors for more detail.
- **output_hidden_states** (`bool`, _optional_) --
  Whether or not to return the hidden states of all layers. See `hidden_states` under returned tensors for
  more detail.
- **return_dict** (`bool`, _optional_) --
  Whether or not to return a [ModelOutput](main_classes/output.html#transformers.file_utils.ModelOutput) instead of a plain tuple.


> Returns

A [DPRQuestionEncoderOutput](model_doc/dpr.html#transformers.models.dpr.modeling_dpr.DPRQuestionEncoderOutput) or a tuple of
`torch.FloatTensor` (if `return_dict=False` is passed or when `config.return_dict=False`) comprising
various elements depending on the configuration ([DPRConfig](model_doc/dpr.html#transformers.DPRConfig)) and inputs.

- **pooler_output:** (:obj:`torch.FloatTensor` of shape `(batch_size, embeddings_size)`) -- The DPR encoder outputs the _pooler_output_ that corresponds to the question representation. Last layer
  hidden-state of the first token of the sequence (classification token) further processed by a Linear layer.
  This output is to be used to embed questions for nearest neighbors queries with context embeddings.
- **hidden_states** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_hidden_states=True` is passed or when `config.output_hidden_states=True`) -- Tuple of `torch.FloatTensor` (one for the output of the embeddings + one for the output of each layer)
  of shape `(batch_size, sequence_length, hidden_size)`.

  Hidden-states of the model at the output of each layer plus the initial embedding outputs.
- **attentions** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_attentions=True` is passed or when `config.output_attentions=True`) -- Tuple of `torch.FloatTensor` (one for each layer) of shape `(batch_size, num_heads, sequence_length, sequence_length)`.

  Attentions weights after the attention softmax, used to compute the weighted average in the self-attention
  heads.


> Examples:

```python
>>> from transformers import DPRQuestionEncoder, DPRQuestionEncoderTokenizer
>>> tokenizer = DPRQuestionEncoderTokenizer.from_pretrained('facebook/dpr-question_encoder-single-nq-base')
>>> model = DPRQuestionEncoder.from_pretrained('facebook/dpr-question_encoder-single-nq-base')
>>> input_ids = tokenizer("Hello, is my dog cute ?", return_tensors='pt')["input_ids"]
>>> embeddings = model(input_ids).pooler_output
```

> Return type

[DPRQuestionEncoderOutput](model_doc/dpr.html#transformers.models.dpr.modeling_dpr.DPRQuestionEncoderOutput) or `tuple(torch.FloatTensor)`


## DPRReader

<a id='transformers.DPRReader'></a>
> **class transformers.DPRReader**(config: DPRConfig)

The bare DPRReader transformer outputting span predictions.

This model inherits from [PreTrainedModel](main_classes/model.html#transformers.PreTrainedModel). Check the superclass documentation for the generic
methods the library implements for all its model (such as downloading or saving, resizing the input embeddings,
pruning heads etc.)

This model is also a PyTorch [torch.nn.Module](https://pytorch.org/docs/stable/nn.html#torch.nn.Module)
subclass. Use it as a regular PyTorch Module and refer to the PyTorch documentation for all matter related to
general usage and behavior.

> Parameters

- **config** ([DPRConfig](model_doc/dpr.html#transformers.DPRConfig)) -- Model configuration class with all the parameters of the model.
  Initializing with a config file does not load the weights associated with the model, only the
  configuration. Check out the [from_pretrained()](main_classes/model.html#transformers.PreTrainedModel.from_pretrained) method to load the model
  weights.


<a id='transformers.DPRReader.forward'></a>
> **forward**(self, input_ids: typing.Optional[torch.Tensor] = None, attention_mask: typing.Optional[torch.Tensor] = None, inputs_embeds: typing.Optional[torch.Tensor] = None, output_attentions: bool = None, output_hidden_states: bool = None, return_dict = None)

The [DPRReader](model_doc/dpr.html#transformers.DPRReader) forward method, overrides the `__call__` special method.

<Tip>

Although the recipe for forward pass needs to be defined within this function, one should call the
`Module` instance afterwards instead of this since the former takes care of running the pre and post
processing steps while the latter silently ignores them.

</Tip>

> Parameters

input_ids -- (`Tuple[torch.LongTensor]` of shapes `(n_passages, sequence_length)`):
Indices of input sequence tokens in the vocabulary. It has to be a sequence triplet with 1) the question
and 2) the passages titles and 3) the passages texts To match pretraining, DPR `input_ids` sequence
should be formatted with [CLS] and [SEP] with the format:

`[CLS] <question token ids> [SEP] <titles ids> [SEP] <texts ids>`

DPR is a model with absolute position embeddings so it's usually advised to pad the inputs on the right
rather than the left.

Indices can be obtained using [DPRReaderTokenizer](model_doc/dpr.html#transformers.DPRReaderTokenizer). See this class documentation for
more details.

[What are input IDs?](../glossary.html#input-ids)
- **attention_mask** (`torch.FloatTensor` of shape `(n_passages, sequence_length)`, _optional_) --
  Mask to avoid performing attention on padding token indices. Mask values selected in `[0, 1]`:

  - 1 for tokens that are **not masked**,
  - 0 for tokens that are **masked**.

  [What are attention masks?](../glossary.html#attention-mask)
- **inputs_embeds** (`torch.FloatTensor` of shape `(n_passages, sequence_length, hidden_size)`, _optional_) --
  Optionally, instead of passing `input_ids` you can choose to directly pass an embedded representation.
  This is useful if you want more control over how to convert `input_ids` indices into associated
  vectors than the model's internal embedding lookup matrix.
- **output_attentions** (`bool`, _optional_) --
  Whether or not to return the attentions tensors of all attention layers. See `attentions` under returned
  tensors for more detail.
- **output_hidden_states** (`bool`, _optional_) --
  Whether or not to return the hidden states of all layers. See `hidden_states` under returned tensors for
  more detail.
- **return_dict** (`bool`, _optional_) --
  Whether or not to return a [ModelOutput](main_classes/output.html#transformers.file_utils.ModelOutput) instead of a plain tuple.


> Returns

A [DPRReaderOutput](model_doc/dpr.html#transformers.DPRReaderOutput) or a tuple of
`torch.FloatTensor` (if `return_dict=False` is passed or when `config.return_dict=False`) comprising
various elements depending on the configuration ([DPRConfig](model_doc/dpr.html#transformers.DPRConfig)) and inputs.

- **start_logits:** (:obj:`torch.FloatTensor` of shape `(n_passages, sequence_length)`) -- Logits of the start index of the span for each passage.
- **end_logits:** (:obj:`torch.FloatTensor` of shape `(n_passages, sequence_length)`) -- Logits of the end index of the span for each passage.
- **relevance_logits:** (``torch.FloatTensor``` of shape `(n_passages, )`) -- Outputs of the QA classifier of the DPRReader that corresponds to the scores of each passage to answer the
  question, compared to all the other passages.
- **hidden_states** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_hidden_states=True` is passed or when `config.output_hidden_states=True`) -- Tuple of `torch.FloatTensor` (one for the output of the embeddings + one for the output of each layer)
  of shape `(batch_size, sequence_length, hidden_size)`.

  Hidden-states of the model at the output of each layer plus the initial embedding outputs.
- **attentions** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_attentions=True` is passed or when `config.output_attentions=True`) -- Tuple of `torch.FloatTensor` (one for each layer) of shape `(batch_size, num_heads, sequence_length, sequence_length)`.

  Attentions weights after the attention softmax, used to compute the weighted average in the self-attention
  heads.


> Examples:

```python
>>> from transformers import DPRReader, DPRReaderTokenizer
>>> tokenizer = DPRReaderTokenizer.from_pretrained('facebook/dpr-reader-single-nq-base')
>>> model = DPRReader.from_pretrained('facebook/dpr-reader-single-nq-base')
>>> encoded_inputs = tokenizer(
...         questions=["What is love ?"],
...         titles=["Haddaway"],
...         texts=["'What Is Love' is a song recorded by the artist Haddaway"],
...         return_tensors='pt'
...     )
>>> outputs = model(**encoded_inputs)
>>> start_logits = outputs.start_logits
>>> end_logits = outputs.end_logits
>>> relevance_logits = outputs.relevance_logits
```

> Return type

[DPRReaderOutput](model_doc/dpr.html#transformers.DPRReaderOutput) or `tuple(torch.FloatTensor)`


## TFDPRContextEncoder

<a id='transformers.TFDPRContextEncoder'></a>
> **class transformers.TFDPRContextEncoder**(*args, **kwargs)

The bare DPRContextEncoder transformer outputting pooler outputs as context representations.

This model inherits from [TFPreTrainedModel](main_classes/model.html#transformers.TFPreTrainedModel). Check the superclass documentation for the
generic methods the library implements for all its model (such as downloading or saving, resizing the input
embeddings, pruning heads etc.)

This model is also a Tensorflow [tf.keras.Model](https://www.tensorflow.org/api_docs/python/tf/keras/Model)
subclass. Use it as a regular TF 2.0 Keras Model and refer to the TF 2.0 documentation for all matter related to
general usage and behavior.

<Tip>

TF 2.0 models accepts two formats as inputs:

- having all inputs as keyword arguments (like PyTorch models), or
- having all inputs as a list, tuple or dict in the first positional arguments.

This second option is useful when using `tf.keras.Model.fit` method which currently requires having all
the tensors in the first argument of the model call function: `model(inputs)`.

If you choose this second option, there are three possibilities you can use to gather all the input Tensors in
the first positional argument :

- a single Tensor with `input_ids` only and nothing else: `model(inputs_ids)`
- a list of varying length with one or several input Tensors IN THE ORDER given in the docstring:
  `model([input_ids, attention_mask])` or `model([input_ids, attention_mask, token_type_ids])`
- a dictionary with one or several input Tensors associated to the input names given in the docstring:
  `model({"input_ids": input_ids, "token_type_ids": token_type_ids})`

</Tip>

> Parameters

- **config** ([DPRConfig](model_doc/dpr.html#transformers.DPRConfig)) -- Model configuration class with all the parameters of the model.
  Initializing with a config file does not load the weights associated with the model, only the
  configuration. Check out the [from_pretrained()](main_classes/model.html#transformers.TFPreTrainedModel.from_pretrained) method to load the
  model weights.


<a id='transformers.TFDPRContextEncoder.call'></a>
> **call**(self, input_ids = None, attention_mask: typing.Optional[tensorflow.python.framework.ops.Tensor] = None, token_type_ids: typing.Optional[tensorflow.python.framework.ops.Tensor] = None, inputs_embeds: typing.Optional[tensorflow.python.framework.ops.Tensor] = None, output_attentions = None, output_hidden_states = None, return_dict = None, training: bool = False, **kwargs)

The [TFDPRContextEncoder](model_doc/dpr.html#transformers.TFDPRContextEncoder) forward method, overrides the `__call__` special method.

<Tip>

Although the recipe for forward pass needs to be defined within this function, one should call the
`Module` instance afterwards instead of this since the former takes care of running the pre and post
processing steps while the latter silently ignores them.

</Tip>

> Parameters

- **input_ids** (`Numpy array` or `tf.Tensor` of shape `(batch_size, sequence_length)`) --
  Indices of input sequence tokens in the vocabulary. To match pretraining, DPR input sequence should be
  formatted with [CLS] and [SEP] tokens as follows:

  (a) For sequence pairs (for a pair title+text for example):

```
tokens:         [CLS] is this jack ##son ##ville ? [SEP] no it is not . [SEP]
token_type_ids:   0   0  0    0    0     0       0   0   1  1  1  1   1   1
```

(b) For single sequences (for a question for example):

```
tokens:         [CLS] the dog is hairy . [SEP]
token_type_ids:   0   0   0   0  0     0   0
```

DPR is a model with absolute position embeddings so it's usually advised to pad the inputs on the right
rather than the left.

Indices can be obtained using `DPRTokenizer`. See
[transformers.PreTrainedTokenizer.encode()](internal/tokenization_utils.html#transformers.PreTrainedTokenizerBase.encode) and [transformers.PreTrainedTokenizer.__call__()](internal/tokenization_utils.html#transformers.PreTrainedTokenizerBase.__call__) for
details.

[What are input IDs?](../glossary.html#input-ids)
- **attention_mask** (`Numpy array` or `tf.Tensor` of shape `(batch_size, sequence_length)`, _optional_) --
  Mask to avoid performing attention on padding token indices. Mask values selected in `[0, 1]`:

  - 1 for tokens that are **not masked**,
  - 0 for tokens that are **masked**.

  [What are attention masks?](../glossary.html#attention-mask)
- **token_type_ids** (`Numpy array` or `tf.Tensor` of shape `(batch_size, sequence_length)`, _optional_) --
  Segment token indices to indicate first and second portions of the inputs. Indices are selected in `[0, 1]`:

  - 0 corresponds to a _sentence A_ token,
  - 1 corresponds to a _sentence B_ token.

  [What are token type IDs?](../glossary.html#token-type-ids)
- **inputs_embeds** (`Numpy array` or `tf.Tensor` of shape `(batch_size, sequence_length, hidden_size)`, _optional_) --
  Optionally, instead of passing `input_ids` you can choose to directly pass an embedded representation.
  This is useful if you want more control over how to convert `input_ids` indices into associated
  vectors than the model's internal embedding lookup matrix.
- **output_attentions** (`bool`, _optional_) --
  Whether or not to return the attentions tensors of all attention layers. See `attentions` under returned
  tensors for more detail. This argument can be used only in eager mode, in graph mode the value in the
  config will be used instead.
- **output_hidden_states** (`bool`, _optional_) --
  Whether or not to return the hidden states of all layers. See `hidden_states` under returned tensors for
  more detail. This argument can be used only in eager mode, in graph mode the value in the config will be
  used instead.
- **return_dict** (`bool`, _optional_) --
  Whether or not to return a [ModelOutput](main_classes/output.html#transformers.file_utils.ModelOutput) instead of a plain tuple. This
  argument can be used in eager mode, in graph mode the value will always be set to True.
- **training** (`bool`, _optional_, defaults to `False`) --
  Whether or not to use the model in training mode (some modules like dropout modules have different
  behaviors between training and evaluation).


> Returns

A `TFDPRContextEncoderOutput` or a tuple of
`tf.Tensor` (if `return_dict=False` is passed or when `config.return_dict=False`) comprising various
elements depending on the configuration ([DPRConfig](model_doc/dpr.html#transformers.DPRConfig)) and inputs.

- **pooler_output:** (:obj:`tf.Tensor` of shape `(batch_size, embeddings_size)`) -- The DPR encoder outputs the _pooler_output_ that corresponds to the context representation. Last layer
  hidden-state of the first token of the sequence (classification token) further processed by a Linear layer.
  This output is to be used to embed contexts for nearest neighbors queries with questions embeddings.
- **hidden_states** (`tuple(tf.Tensor)`, _optional_, returned when `output_hidden_states=True` is passed or when `config.output_hidden_states=True`) -- Tuple of `tf.Tensor` (one for the output of the embeddings + one for the output of each layer) of
  shape `(batch_size, sequence_length, hidden_size)`.

  Hidden-states of the model at the output of each layer plus the initial embedding outputs.
- **attentions** (`tuple(tf.Tensor)`, _optional_, returned when `output_attentions=True` is passed or when `config.output_attentions=True`) -- Tuple of `tf.Tensor` (one for each layer) of shape `(batch_size, num_heads, sequence_length, sequence_length)`.

  Attentions weights after the attention softmax, used to compute the weighted average in the self-attention
  heads.


> Examples:

```python
>>> from transformers import TFDPRContextEncoder, DPRContextEncoderTokenizer
>>> tokenizer = DPRContextEncoderTokenizer.from_pretrained('facebook/dpr-ctx_encoder-single-nq-base')
>>> model = TFDPRContextEncoder.from_pretrained('facebook/dpr-ctx_encoder-single-nq-base', from_pt=True)
>>> input_ids = tokenizer("Hello, is my dog cute ?", return_tensors='tf')["input_ids"]
>>> embeddings = model(input_ids).pooler_output
```

> Return type

`TFDPRContextEncoderOutput` or `tuple(tf.Tensor)`


## TFDPRQuestionEncoder

<a id='transformers.TFDPRQuestionEncoder'></a>
> **class transformers.TFDPRQuestionEncoder**(*args, **kwargs)

The bare DPRQuestionEncoder transformer outputting pooler outputs as question representations.

This model inherits from [TFPreTrainedModel](main_classes/model.html#transformers.TFPreTrainedModel). Check the superclass documentation for the
generic methods the library implements for all its model (such as downloading or saving, resizing the input
embeddings, pruning heads etc.)

This model is also a Tensorflow [tf.keras.Model](https://www.tensorflow.org/api_docs/python/tf/keras/Model)
subclass. Use it as a regular TF 2.0 Keras Model and refer to the TF 2.0 documentation for all matter related to
general usage and behavior.

<Tip>

TF 2.0 models accepts two formats as inputs:

- having all inputs as keyword arguments (like PyTorch models), or
- having all inputs as a list, tuple or dict in the first positional arguments.

This second option is useful when using `tf.keras.Model.fit` method which currently requires having all
the tensors in the first argument of the model call function: `model(inputs)`.

If you choose this second option, there are three possibilities you can use to gather all the input Tensors in
the first positional argument :

- a single Tensor with `input_ids` only and nothing else: `model(inputs_ids)`
- a list of varying length with one or several input Tensors IN THE ORDER given in the docstring:
  `model([input_ids, attention_mask])` or `model([input_ids, attention_mask, token_type_ids])`
- a dictionary with one or several input Tensors associated to the input names given in the docstring:
  `model({"input_ids": input_ids, "token_type_ids": token_type_ids})`

</Tip>

> Parameters

- **config** ([DPRConfig](model_doc/dpr.html#transformers.DPRConfig)) -- Model configuration class with all the parameters of the model.
  Initializing with a config file does not load the weights associated with the model, only the
  configuration. Check out the [from_pretrained()](main_classes/model.html#transformers.TFPreTrainedModel.from_pretrained) method to load the
  model weights.


<a id='transformers.TFDPRQuestionEncoder.call'></a>
> **call**(self, input_ids = None, attention_mask: typing.Optional[tensorflow.python.framework.ops.Tensor] = None, token_type_ids: typing.Optional[tensorflow.python.framework.ops.Tensor] = None, inputs_embeds: typing.Optional[tensorflow.python.framework.ops.Tensor] = None, output_attentions = None, output_hidden_states = None, return_dict = None, training: bool = False, **kwargs)

The [TFDPRQuestionEncoder](model_doc/dpr.html#transformers.TFDPRQuestionEncoder) forward method, overrides the `__call__` special method.

<Tip>

Although the recipe for forward pass needs to be defined within this function, one should call the
`Module` instance afterwards instead of this since the former takes care of running the pre and post
processing steps while the latter silently ignores them.

</Tip>

> Parameters

- **input_ids** (`Numpy array` or `tf.Tensor` of shape `(batch_size, sequence_length)`) --
  Indices of input sequence tokens in the vocabulary. To match pretraining, DPR input sequence should be
  formatted with [CLS] and [SEP] tokens as follows:

  (a) For sequence pairs (for a pair title+text for example):

```
tokens:         [CLS] is this jack ##son ##ville ? [SEP] no it is not . [SEP]
token_type_ids:   0   0  0    0    0     0       0   0   1  1  1  1   1   1
```

(b) For single sequences (for a question for example):

```
tokens:         [CLS] the dog is hairy . [SEP]
token_type_ids:   0   0   0   0  0     0   0
```

DPR is a model with absolute position embeddings so it's usually advised to pad the inputs on the right
rather than the left.

Indices can be obtained using `DPRTokenizer`. See
[transformers.PreTrainedTokenizer.encode()](internal/tokenization_utils.html#transformers.PreTrainedTokenizerBase.encode) and [transformers.PreTrainedTokenizer.__call__()](internal/tokenization_utils.html#transformers.PreTrainedTokenizerBase.__call__) for
details.

[What are input IDs?](../glossary.html#input-ids)
- **attention_mask** (`Numpy array` or `tf.Tensor` of shape `(batch_size, sequence_length)`, _optional_) --
  Mask to avoid performing attention on padding token indices. Mask values selected in `[0, 1]`:

  - 1 for tokens that are **not masked**,
  - 0 for tokens that are **masked**.

  [What are attention masks?](../glossary.html#attention-mask)
- **token_type_ids** (`Numpy array` or `tf.Tensor` of shape `(batch_size, sequence_length)`, _optional_) --
  Segment token indices to indicate first and second portions of the inputs. Indices are selected in `[0, 1]`:

  - 0 corresponds to a _sentence A_ token,
  - 1 corresponds to a _sentence B_ token.

  [What are token type IDs?](../glossary.html#token-type-ids)
- **inputs_embeds** (`Numpy array` or `tf.Tensor` of shape `(batch_size, sequence_length, hidden_size)`, _optional_) --
  Optionally, instead of passing `input_ids` you can choose to directly pass an embedded representation.
  This is useful if you want more control over how to convert `input_ids` indices into associated
  vectors than the model's internal embedding lookup matrix.
- **output_attentions** (`bool`, _optional_) --
  Whether or not to return the attentions tensors of all attention layers. See `attentions` under returned
  tensors for more detail. This argument can be used only in eager mode, in graph mode the value in the
  config will be used instead.
- **output_hidden_states** (`bool`, _optional_) --
  Whether or not to return the hidden states of all layers. See `hidden_states` under returned tensors for
  more detail. This argument can be used only in eager mode, in graph mode the value in the config will be
  used instead.
- **return_dict** (`bool`, _optional_) --
  Whether or not to return a [ModelOutput](main_classes/output.html#transformers.file_utils.ModelOutput) instead of a plain tuple. This
  argument can be used in eager mode, in graph mode the value will always be set to True.
- **training** (`bool`, _optional_, defaults to `False`) --
  Whether or not to use the model in training mode (some modules like dropout modules have different
  behaviors between training and evaluation).


> Returns

A `TFDPRQuestionEncoderOutput` or a tuple of
`tf.Tensor` (if `return_dict=False` is passed or when `config.return_dict=False`) comprising various
elements depending on the configuration ([DPRConfig](model_doc/dpr.html#transformers.DPRConfig)) and inputs.

- **pooler_output:** (:obj:`tf.Tensor` of shape `(batch_size, embeddings_size)`) -- The DPR encoder outputs the _pooler_output_ that corresponds to the question representation. Last layer
  hidden-state of the first token of the sequence (classification token) further processed by a Linear layer.
  This output is to be used to embed questions for nearest neighbors queries with context embeddings.
- **hidden_states** (`tuple(tf.Tensor)`, _optional_, returned when `output_hidden_states=True` is passed or when `config.output_hidden_states=True`) -- Tuple of `tf.Tensor` (one for the output of the embeddings + one for the output of each layer) of
  shape `(batch_size, sequence_length, hidden_size)`.

  Hidden-states of the model at the output of each layer plus the initial embedding outputs.
- **attentions** (`tuple(tf.Tensor)`, _optional_, returned when `output_attentions=True` is passed or when `config.output_attentions=True`) -- Tuple of `tf.Tensor` (one for each layer) of shape `(batch_size, num_heads, sequence_length, sequence_length)`.

  Attentions weights after the attention softmax, used to compute the weighted average in the self-attention
  heads.


> Examples:

```python
>>> from transformers import TFDPRQuestionEncoder, DPRQuestionEncoderTokenizer
>>> tokenizer = DPRQuestionEncoderTokenizer.from_pretrained('facebook/dpr-question_encoder-single-nq-base')
>>> model = TFDPRQuestionEncoder.from_pretrained('facebook/dpr-question_encoder-single-nq-base', from_pt=True)
>>> input_ids = tokenizer("Hello, is my dog cute ?", return_tensors='tf')["input_ids"]
>>> embeddings = model(input_ids).pooler_output
```

> Return type

`TFDPRQuestionEncoderOutput` or `tuple(tf.Tensor)`


## TFDPRReader

<a id='transformers.TFDPRReader'></a>
> **class transformers.TFDPRReader**(*args, **kwargs)

The bare DPRReader transformer outputting span predictions.

This model inherits from [TFPreTrainedModel](main_classes/model.html#transformers.TFPreTrainedModel). Check the superclass documentation for the
generic methods the library implements for all its model (such as downloading or saving, resizing the input
embeddings, pruning heads etc.)

This model is also a Tensorflow [tf.keras.Model](https://www.tensorflow.org/api_docs/python/tf/keras/Model)
subclass. Use it as a regular TF 2.0 Keras Model and refer to the TF 2.0 documentation for all matter related to
general usage and behavior.

<Tip>

TF 2.0 models accepts two formats as inputs:

- having all inputs as keyword arguments (like PyTorch models), or
- having all inputs as a list, tuple or dict in the first positional arguments.

This second option is useful when using `tf.keras.Model.fit` method which currently requires having all
the tensors in the first argument of the model call function: `model(inputs)`.

If you choose this second option, there are three possibilities you can use to gather all the input Tensors in
the first positional argument :

- a single Tensor with `input_ids` only and nothing else: `model(inputs_ids)`
- a list of varying length with one or several input Tensors IN THE ORDER given in the docstring:
  `model([input_ids, attention_mask])` or `model([input_ids, attention_mask, token_type_ids])`
- a dictionary with one or several input Tensors associated to the input names given in the docstring:
  `model({"input_ids": input_ids, "token_type_ids": token_type_ids})`

</Tip>

> Parameters

- **config** ([DPRConfig](model_doc/dpr.html#transformers.DPRConfig)) -- Model configuration class with all the parameters of the model.
  Initializing with a config file does not load the weights associated with the model, only the
  configuration. Check out the [from_pretrained()](main_classes/model.html#transformers.TFPreTrainedModel.from_pretrained) method to load the
  model weights.


<a id='transformers.TFDPRReader.call'></a>
> **call**(self, input_ids = None, attention_mask: typing.Optional[tensorflow.python.framework.ops.Tensor] = None, inputs_embeds: typing.Optional[tensorflow.python.framework.ops.Tensor] = None, output_attentions: bool = None, output_hidden_states: bool = None, return_dict = None, training: bool = False, **kwargs)

The [TFDPRReader](model_doc/dpr.html#transformers.TFDPRReader) forward method, overrides the `__call__` special method.

<Tip>

Although the recipe for forward pass needs to be defined within this function, one should call the
`Module` instance afterwards instead of this since the former takes care of running the pre and post
processing steps while the latter silently ignores them.

</Tip>

> Parameters

input_ids -- (`Numpy array` or `tf.Tensor` of shapes `(n_passages, sequence_length)`):
Indices of input sequence tokens in the vocabulary. It has to be a sequence triplet with 1) the question
and 2) the passages titles and 3) the passages texts To match pretraining, DPR `input_ids` sequence
should be formatted with [CLS] and [SEP] with the format:

`[CLS] <question token ids> [SEP] <titles ids> [SEP] <texts ids>`

DPR is a model with absolute position embeddings so it's usually advised to pad the inputs on the right
rather than the left.

Indices can be obtained using [DPRReaderTokenizer](model_doc/dpr.html#transformers.DPRReaderTokenizer). See this class documentation for
more details.
- **attention_mask** (`Numpy array` or `tf.Tensor` of shape `(n_passages, sequence_length)`, _optional_) --
  Mask to avoid performing attention on padding token indices. Mask values selected in `[0, 1]`:

  - 1 for tokens that are **not masked**,
  - 0 for tokens that are **masked**.

  [What are attention masks?](../glossary.html#attention-mask)
- **inputs_embeds** (`Numpy array` or `tf.Tensor` of shape `(n_passages, sequence_length, hidden_size)`, _optional_) --
  Optionally, instead of passing `input_ids` you can choose to directly pass an embedded representation.
  This is useful if you want more control over how to convert `input_ids` indices into associated
  vectors than the model's internal embedding lookup matrix.
- **output_hidden_states** (`bool`, _optional_) --
  Whether or not to return the hidden states of all layers. See `hidden_states` under returned tensors for
  more detail. This argument can be used only in eager mode, in graph mode the value in the config will be
  used instead.
- **return_dict** (`bool`, _optional_) --
  Whether or not to return a [ModelOutput](main_classes/output.html#transformers.file_utils.ModelOutput) instead of a plain tuple. This
  argument can be used in eager mode, in graph mode the value will always be set to True.
- **training** (`bool`, _optional_, defaults to `False`) --
  Whether or not to use the model in training mode (some modules like dropout modules have different
  behaviors between training and evaluation).


> Returns

A `TFDPRReaderOutput` or a tuple of
`tf.Tensor` (if `return_dict=False` is passed or when `config.return_dict=False`) comprising various
elements depending on the configuration ([DPRConfig](model_doc/dpr.html#transformers.DPRConfig)) and inputs.

- **start_logits:** (:obj:`tf.Tensor` of shape `(n_passages, sequence_length)`) -- Logits of the start index of the span for each passage.
- **end_logits:** (:obj:`tf.Tensor` of shape `(n_passages, sequence_length)`) -- Logits of the end index of the span for each passage.
- **relevance_logits:** (``tf.Tensor``` of shape `(n_passages, )`) -- Outputs of the QA classifier of the DPRReader that corresponds to the scores of each passage to answer the
  question, compared to all the other passages.
- **hidden_states** (`tuple(tf.Tensor)`, _optional_, returned when `output_hidden_states=True` is passed or when `config.output_hidden_states=True`) -- Tuple of `tf.Tensor` (one for the output of the embeddings + one for the output of each layer) of
  shape `(batch_size, sequence_length, hidden_size)`.

  Hidden-states of the model at the output of each layer plus the initial embedding outputs.
- **attentions** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_attentions=True` is passed or when `config.output_attentions=True`) -- Tuple of `torch.FloatTensor` (one for each layer) of shape `(batch_size, num_heads, sequence_length, sequence_length)`.

  Attentions weights after the attention softmax, used to compute the weighted average in the self-attention
  heads.


> Examples:

```python
>>> from transformers import TFDPRReader, DPRReaderTokenizer
>>> tokenizer = DPRReaderTokenizer.from_pretrained('facebook/dpr-reader-single-nq-base')
>>> model = TFDPRReader.from_pretrained('facebook/dpr-reader-single-nq-base', from_pt=True)
>>> encoded_inputs = tokenizer(
...         questions=["What is love ?"],
...         titles=["Haddaway"],
...         texts=["'What Is Love' is a song recorded by the artist Haddaway"],
...         return_tensors='tf'
...     )
>>> outputs = model(encoded_inputs)
>>> start_logits = outputs.start_logits
>>> end_logits = outputs.end_logits
>>> relevance_logits = outputs.relevance_logits
```

> Return type

`TFDPRReaderOutput` or `tuple(tf.Tensor)`

